<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Ciudades"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/colorTextos"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnBrk"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/txt_btn_1"
        android:textColor="@color/colorTextos"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnStz"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/txt_btn_2"
        android:textColor="@color/colorTextos"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnBi"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/txt_btn_3"
        android:textColor="@color/colorTextos"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnMus"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/txt_btn_4"
        android:textColor="@color/colorTextos"
        android:textSize="18sp" />
</androidx.appcompat.widget.LinearLayoutCompat>